# Music-Discovery-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  normalization_rules.yaml
data/eval/: matching_benchmark.csv
files/: PRD.md  PROPOSAL.md  db-description.md
music_discovery/: __init__.py
music_discovery/cli/: __init__.py  main.py
music_discovery/data/: __init__.py  coverage_analysis.py  features.py  interactions.py  item_bridge.py  kaggle_spotify.py  lastfm.py  matcher.py  normalization.py  side_info.py  taste_profile.py  triplets.py
music_discovery/evaluate/: __init__.py  holdout_eval.py  matching_quality.py  persona_validation.py  recommendation_quality.py  spotify_overlap.py  weight_sensitivity.py
music_discovery/models/: __init__.py  gmm.py  scorer.py
music_discovery/train/: __init__.py  fit_personas.py  train_als.py  train_embeddings.py
notebooks/: 01_targeted_pipeline_eda.ipynb  03_embedding_analysis.ipynb  04_persona_analysis.ipynb  05_experiment_results.ipynb
tests/: test_features.py  test_gmm.py  test_holdout_eval_user_path.py  test_holdout_metrics.py  test_holdout_overlap_guard.py  test_mlp.py  test_scorer.py
